examples/test/testpolicy3276.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3276
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key31: value21
      key30: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value5
          key6: value44
          key25: value34
      podSelector:
        matchLabels:
          key24: value26
          key20: value39
          key19: value31
